Update unit tests to cover new paymentMethod support in order creation